# GHTracker

./: .gitignore  CHROMEWEBSTORE.md  README.md  background.js  content-script.js  manifest.json  overlay.css  package-lock.json  package.json  page-bridge.js
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
